--- a/widget/html/accessoryexam/viewAccessoryExamFrame.html
+++ b/widget/html/accessoryexam/viewAccessoryExamFrame.html
@@ -355,18 +355,18 @@ function getImgHtml(obj, imgGroup) {
     var imgHtml = "";
     while(idx < size) {
         imgHtml = imgHtml + "<img src=" + obj[idx] + " id=" + imgGroup + idx +
-        " onclick='openImg(this.src)' />";
+        " onclick='openImg(this.id)' />";
         idx = idx + 1;
     }
     return imgHtml;
 }
 
-function openImg(url) {
+function openImg(imgId) {
+    var imgGroup = imgId.substr(0, imgId.length - 1);
+    var accessoryExam = getStorage("accessoryExam");
     var photoBrowser = api.require('photoBrowser');
     photoBrowser.open({
-        images: [
-            url,
-        ],
+        images: accessoryExam[imgGroup],
         activeIndex: 0,
         // placeholderImg: 'widget://res/img/apicloud.png',
         bgColor: '#000'
