--- a/widget/html/accessoryexam/viewAccessoryExamFrame.html
+++ b/widget/html/accessoryexam/viewAccessoryExamFrame.html
@@ -363,11 +363,12 @@ function getImgHtml(obj, imgGroup) {
 
 function openImg(imgId) {
     var imgGroup = imgId.substr(0, imgId.length - 1);
+    var id = imgId.substr(-1);
     var accessoryExam = getStorage("accessoryExam");
     var photoBrowser = api.require('photoBrowser');
     photoBrowser.open({
         images: accessoryExam[imgGroup],
-        activeIndex: 0,
+        activeIndex: id,
         // placeholderImg: 'widget://res/img/apicloud.png',
         bgColor: '#000'
     }, function(ret) {
