增加android后退键提示

--- a/widget/html/accessoryexam/accessoryExam.html
+++ b/widget/html/accessoryexam/accessoryExam.html
@@ -270,6 +270,15 @@ apiready = function() {
             duration: 0
         }
     });
+    
+    // 绑定android后退键事件
+    api.addEventListener({
+        name: 'keyback'
+    }, function(ret, err) {
+        if (ret) {
+            confirmChosen();
+        }
+    });
 }
 </script>
 
