--- a/widget/html/history/historyFrame.html
+++ b/widget/html/history/historyFrame.html
@@ -126,7 +126,7 @@
  */
 apiready = function() {
     window.closeWin = function(winName) {
-        api.closeWin();
+        confirmChosen();
     }
 
     userName = $api.getStorage("userName");
