--- a/widget/html/physical/physicalFrame.html
+++ b/widget/html/physical/physicalFrame.html
@@ -128,7 +128,7 @@
  */
 apiready = function() {
     window.closeWin = function(winName) {
-        api.closeWin();
+        confirmChosen();
     }
 
     // 视力通过picker选择，不允许输入
