--- a/widget/html/history/history.html
+++ b/widget/html/history/history.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../../css/history.css" />
     <link rel="stylesheet" type="text/css" href="../../css/button.css" />
     <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
+    <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
 <body class="body-silver">
