列表左划按钮由文字改为图标

--- a/widget/html/history/historyList.html
+++ b/widget/html/history/historyList.html
@@ -95,20 +95,20 @@ var apiready = function() {
             bgColor: '#d5d7dc',
             activeBgColor: '#688CD4',
             width: 70,
-            title: '修改',
+            title: '',
             titleSize: 14,
             titleColor: '#424758',
-            icon: '',
-            iconWidth: 20
+            icon: 'widget://image/modi.png',
+            iconWidth: 25
         }, {
             bgColor: '#d5d7dc',
             activeBgColor: '#688CD4',
             width: 70,
-            title: '删除',
+            title: '',
             titleSize: 14,
             titleColor: '#424758',
-            icon: '',
-            iconWidth: 20
+            icon: 'widget://image/delete.png',
+            iconWidth: 25
         }],
         styles: {
             borderColor: '#f0f0f0',
