ios设置划屏返回上一window无效

--- a/widget/html/accessoryexam/viewAccessoryExamFrame.html
+++ b/widget/html/accessoryexam/viewAccessoryExamFrame.html
@@ -389,6 +389,7 @@ function modiAccessoryExam() {
         reload: true,
         bounces: false,
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         animation: {
             type: "fade",
             duration: 0
