--- a/widget/html/followup/followupList.html
+++ b/widget/html/followup/followupList.html
@@ -239,6 +239,7 @@ function viewFollowUp(follow_up_id) {
             follow_up_id: follow_up_id
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
@@ -257,6 +258,7 @@ function newFollowUp() {
             history_id: history_id
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
@@ -276,6 +278,7 @@ function modiFollowUp(follow_up_id) {
             follow_up_id: follow_up_id
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
