--- a/widget/html/followup/viewFollowUpFrame.html
+++ b/widget/html/followup/viewFollowUpFrame.html
@@ -126,6 +126,7 @@ function modiFollowUp() {
         reload: true,
         bounces: false,
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         animation: {
             type: "fade",
             duration: 0
@@ -157,6 +158,7 @@ function openWin(type) {
         reload: true,
         bounces: false,
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         animation: {
             type: "movein",
             duration: 0
