--- a/widget/html/history/historyFrame.html
+++ b/widget/html/history/historyFrame.html
@@ -278,6 +278,7 @@ function showDupHistoryList(name) {
             name: name
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false
     });
@@ -376,6 +377,7 @@ function openWin(type) {
         reload: true,
         bounces: false,
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         animation: {
             type: "movein",
             duration: 0
