--- a/widget/html/history/historyList.html
+++ b/widget/html/history/historyList.html
@@ -333,6 +333,7 @@ function addHistory() {
         url: 'widget://html/history/history.html',
         pageParam: {},
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
@@ -355,6 +356,7 @@ function viewHistory(history_id) {
             history_id: history_id
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
@@ -379,6 +381,7 @@ function modiHistory(history_id) {
             history_id: history_id,
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
