--- a/widget/html/physical/viewPhysicalFrame.html
+++ b/widget/html/physical/viewPhysicalFrame.html
@@ -207,6 +207,7 @@ function modiPhysical() {
             source_id: api.pageParam.source_id
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
