--- a/widget/html/history/dupHistoryList.html
+++ b/widget/html/history/dupHistoryList.html
@@ -198,6 +198,7 @@ function viewHistory(history_id) {
             history_id: history_id
         },
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: {
