--- a/widget/html/history/viewFullHistoryFrame.html
+++ b/widget/html/history/viewFullHistoryFrame.html
@@ -281,6 +281,7 @@ function openWin(type) {
         url: '../' + page + '.html',
         pageParam: pageParam,
         vScrollBarEnabled: false,
+        slidBackEnabled: false,
         reload: true,
         bounces: false,
         animation: animation
