--- a/widget/html/physical/viewPhysical.html
+++ b/widget/html/physical/viewPhysical.html
@@ -31,13 +31,13 @@
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
-                        <input type="text" id="vod" onclick="openPicker('vod')" />
+                        <input type="text" id="vod" />
                     </div>
                 </div>
                 <div class="field bottom">
                     <div class="key">Vos</div>
                     <div class="value">
-                        <input type="text" id="vos" onclick="openPicker('vos')" />
+                        <input type="text" id="vos" />
                     </div>
                 </div>
             </div>
@@ -46,13 +46,13 @@
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
-                        <input type="text" id="corrected_vod" onclick="openPicker('corrected_vod')" />
+                        <input type="text" id="corrected_vod" />
                     </div>
                 </div>
                 <div class="field bottom">
                     <div class="key">Vos</div>
                     <div class="value">
-                        <input type="text" id="corrected_vos" onclick="openPicker('corrected_vos')" />
+                        <input type="text" id="corrected_vos" />
                     </div>
                 </div>
             </div>
