--- a/widget/html/history/history.html
+++ b/widget/html/history/history.html
@@ -34,13 +34,13 @@
                         <input type="text" id="name" onblur="checkPatientName();" />
                     </div>
                 </div>
-                <div class="field" onclick="openPicker('gender');">
+                <div class="field">
                     <div class="key">性别</div>
                     <div class="value">
                         <input type="text" id="gender" />
                     </div>
                 </div>
-                <div class="field" onclick="openPicker('date');">
+                <div class="field">
                     <div class="key">出生日期</div>
                     <div class="value">
                         <input type="text" id="birthday" />
@@ -91,7 +91,7 @@
             </div>
             <div class="groupName">诊疗</div>
             <div class="group group-edit">
-                <div class="field" onclick="openPicker('consultation_department');">
+                <div class="field">
                     <div class="key">会诊科室</div>
                     <div class="value">
                         <input type="text" id="consultation_department" />
@@ -137,7 +137,7 @@ apiready = function() {
             duration: 100
         },
     });
-    
+
     // 绑定android后退键事件
     api.addEventListener({
         name: 'keyback'
